Migrate site to Astro
This migrates the site from the Gatsby framework to Astro.

The site should be functionally identical, but no longer with any JavaScript.

--- a/src/layouts/Layout.sass
+++ b/src/layouts/Layout.sass
@@ -20,21 +20,21 @@ $menu-item-hover-background-color: $yellow-light
 $menu-item-active-color: #000
 $menu-label-color: #74726d
 
-$fa-font-path: '~@reupen/fontawesome-pro/webfonts'
+$fa-font-path: '@reupen/fontawesome-pro/webfonts'
 
-@import '~bulma/sass/utilities/all'
-@import '~bulma/sass/base/all'
-@import '~bulma/sass/components/menu'
-@import '~bulma/sass/elements/container'
-@import '~bulma/sass/elements/content'
-@import '~bulma/sass/elements/title'
-@import '~bulma/sass/elements/notification'
-@import '~bulma/sass/grid/columns'
-@import '~bulma/sass/layout/section'
+@import 'bulma/sass/utilities/all'
+@import 'bulma/sass/base/all'
+@import 'bulma/sass/components/menu'
+@import 'bulma/sass/elements/container'
+@import 'bulma/sass/elements/content'
+@import 'bulma/sass/elements/title'
+@import 'bulma/sass/elements/notification'
+@import 'bulma/sass/grid/columns'
+@import 'bulma/sass/layout/section'
 
-@import "~@reupen/fontawesome-pro/scss/fontawesome"
-@import "~@reupen/fontawesome-pro/scss/solid"
-@import "~@reupen/fontawesome-pro/scss/list"
+@import "@reupen/fontawesome-pro/scss/fontawesome"
+@import "@reupen/fontawesome-pro/scss/solid"
+@import "@reupen/fontawesome-pro/scss/list"
 
 .menu
   .is-active
