--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,8 @@ const siteAuthor = "musicmusic"
 const { title, description } = Astro.props
 
 const computedDescription = description || siteDescription
-const computedTitle = title ? `${title} – ${siteTitle}` : siteTitle
+const computedTitle =
+  title && title !== siteTitle ? `${title} – ${siteTitle}` : siteTitle
 ---
 
 <!DOCTYPE html>
