--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout>
+<Layout title="musicmusic’s foobar2000 stuff">
   <p>
     On this site, you’ll find various components I’ve written for the{" "}
     <a href="https://foobar2000.org">foobar2000 audio player</a>.
