--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -87,8 +87,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Latest pre-release version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-2.0.0-beta.1.x86-x64.fb2k-component"
-      label="Version 2.0.0 beta 1"
+      filename="foo_ui_columns-2.0.0-beta.2.x86-x64.fb2k-component"
+      label="Version 2.0.0 beta 2"
     />
   </DownloadList>
 
@@ -108,6 +108,10 @@ const screenshotHeight = `${(
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-2.0.0-beta.1.x86-x64.fb2k-component"
+      label="Version 2.0.0 beta 1"
+    />
     <DownloadListItem
       filename="foo_ui_columns-2.0.0-alpha.5.x86-x64.fb2k-component"
       label="Version 2.0.0 alpha 5"
