Add Album list panel 1.0.0 beta 3

--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -29,8 +29,8 @@ const repo = "album_list_panel"
   <h4 class="title is-4">Latest pre-release version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_uie_albumlist-1.0.0-beta.2.x86-x64.fb2k-component"
-      label="Version 1.0.0 beta 2"
+      filename="foo_uie_albumlist-1.0.0-beta.3.x86-x64.fb2k-component"
+      label="Version 1.0.0 beta 3"
     />
   </DownloadList>
 
@@ -44,6 +44,10 @@ const repo = "album_list_panel"
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_albumlist-1.0.0-beta.2.x86-x64.fb2k-component"
+      label="Version 1.0.0 beta 2"
+    />
     <DownloadListItem
       filename="foo_uie_albumlist-1.0.0-beta.1.fb2k-component"
       label="Version 1.0.0 beta 1"
