--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -26,24 +26,20 @@ const repo = "album_list_panel"
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest pre-release version</h4>
+  <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_uie_albumlist-1.0.0-beta.3.x86-x64.fb2k-component"
-      label="Version 1.0.0 beta 3"
-    />
-  </DownloadList>
-
-  <h4 class="title is-4">Latest stable version</h4>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_uie_albumlist-0.4.2.fb2k-component"
-      label="Version 0.4.2"
+      filename="foo_uie_albumlist-1.0.0.x86-x64.fb2k-component"
+      label="Version 1.0.0"
     />
   </DownloadList>
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_albumlist-1.0.0-beta.3.x86-x64.fb2k-component"
+      label="Version 1.0.0 beta 3"
+    />
     <DownloadListItem
       filename="foo_uie_albumlist-1.0.0-beta.2.x86-x64.fb2k-component"
       label="Version 1.0.0 beta 2"
@@ -51,6 +47,10 @@ const repo = "album_list_panel"
     <DownloadListItem
       filename="foo_uie_albumlist-1.0.0-beta.1.fb2k-component"
       label="Version 1.0.0 beta 1"
+    />
+    <DownloadListItem
+      filename="foo_uie_albumlist-0.4.2.fb2k-component"
+      label="Version 0.4.2"
     />
     <DownloadListItem
       filename="foo_uie_albumlist-0.4.1.fb2k-component"
