--- a/src/pages/console-panel.astro
+++ b/src/pages/console-panel.astro
@@ -22,24 +22,24 @@ const repo = "console_panel"
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest pre-release version</h4>
+  <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_uie_console-3.0.0-beta.2.x86-x64.fb2k-component"
-      label="Version 3.0.0 beta 2"
-    />
-  </DownloadList>
-
-  <h4 class="title is-4">Latest stable version</h4>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_uie_console-2.0.0.fb2k-component"
-      label="Version 2.0.0"
+      filename="foo_uie_console-3.0.0.x86-x64.fb2k-component"
+      label="Version 3.0.0"
     />
   </DownloadList>
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_console-3.0.0-beta.2.x86-x64.fb2k-component"
+      label="Version 3.0.0 beta 2"
+    />
+    <DownloadListItem
+      filename="foo_uie_console-3.0.0-beta.2.x86-x64.fb2k-component"
+      label="Version 3.0.0 beta 2"
+    />
     <DownloadListItem
       filename="foo_uie_console-1.0.1.fb2k-component"
       label="Version 1.0.1"
