--- a/src/pages/columns-ui-sdk.astro
+++ b/src/pages/columns-ui-sdk.astro
@@ -29,6 +29,14 @@ const links = [
   <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
+      filename="columns_ui-sdk-7.0.0.7z"
+      label="Version 7.0.0"
+    />
+  </DownloadList>
+
+  <h4 class="title is-4">Previous version</h4>
+  <DownloadList>
+    <DownloadListItem
       filename="columns_ui-sdk-7.0.0-beta.2.7z"
       label="Version 7.0.0 beta 2"
     />
