--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -84,19 +84,11 @@ const screenshotHeight = `${(
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest pre-release version</h4>
+  <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-2.0.0-rc.1.x86-x64.fb2k-component"
-      label="Version 2.0.0 rc 1"
-    />
-  </DownloadList>
-
-  <h4 class="title is-4">Latest stable version</h4>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_ui_columns-1.7.0.fb2k-component"
-      label="Version 1.7.0"
+      filename="foo_ui_columns-2.0.0.x86-x64.fb2k-component"
+      label="Version 2.0.0"
     />
   </DownloadList>
 
@@ -109,6 +101,10 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
     <DownloadListItem
+      filename="foo_ui_columns-2.0.0-rc.1.x86-x64.fb2k-component"
+      label="Version 2.0.0 rc 1"
+    />
+    <DownloadListItem
       filename="foo_ui_columns-2.0.0-beta.2.x86-x64.fb2k-component"
       label="Version 2.0.0 beta 2"
     />
@@ -119,6 +115,10 @@ const screenshotHeight = `${(
     <DownloadListItem
       filename="foo_ui_columns-2.0.0-alpha.5.x86-x64.fb2k-component"
       label="Version 2.0.0 alpha 5"
+    />
+    <DownloadListItem
+      filename="foo_ui_columns-1.7.0.fb2k-component"
+      label="Version 1.7.0"
     />
     <DownloadListItem
       filename="foo_ui_columns-1.6.0.fb2k-component"
