Add SVG services 0.2.0

--- a/src/pages/svg-services.astro
+++ b/src/pages/svg-services.astro
@@ -17,6 +17,14 @@ const repo = "svg-services"
   <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
+      filename="foo_svg_services-0.2.0.x86-x64.fb2k-component"
+      label="Version 0.2.0"
+    />
+  </DownloadList>
+
+  <h4 class="title is-4">Previous version</h4>
+  <DownloadList>
+    <DownloadListItem
       filename="foo_svg_services-0.1.0.x86-x64.fb2k-component"
       label="Version 0.1.0"
     />
