--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -84,7 +84,15 @@ const screenshotHeight = `${(
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest version</h4>
+  <h4 class="title is-4">Latest pre-release version</h4>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-2.1.0-beta.1.x86-x64.fb2k-component"
+      label="Version 2.1.0 beta 1"
+    />
+  </DownloadList>
+
+  <h4 class="title is-4">Latest stable version</h4>
   <DownloadList>
     <DownloadListItem
       filename="foo_ui_columns-2.0.0.x86-x64.fb2k-component"
