Add Album list panel 2.0.0 alpha 1

--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -26,7 +26,15 @@ const repo = "album_list_panel"
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest version</h4>
+  <h4 class="title is-4">Latest pre-release version</h4>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_albumlist-2.0.0-alpha.1.x86-x64.fb2k-component"
+      label="Version 2.0.0 alpha 1"
+    />
+  </DownloadList>
+
+  <h4 class="title is-4">Latest stable version</h4>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_albumlist-1.0.0.x86-x64.fb2k-component"
