Add Columns UI 2.1.0 and Album list panel 2.0.0

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -84,19 +84,11 @@ const screenshotHeight = `${(
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest pre-release version</h4>
+  <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-2.1.0-beta.3.x86-x64.fb2k-component"
-      label="Version 2.1.0 beta 3"
-    />
-  </DownloadList>
-
-  <h4 class="title is-4">Latest stable version</h4>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_ui_columns-2.0.0.x86-x64.fb2k-component"
-      label="Version 2.0.0"
+      filename="foo_ui_columns-2.1.0.x86-x64.fb2k-component"
+      label="Version 2.1.0"
     />
   </DownloadList>
 
@@ -109,12 +101,12 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-2.1.0-beta.2.x86-x64.fb2k-component"
-      label="Version 2.1.0 beta 2"
+      filename="foo_ui_columns-2.1.0-beta.3.x86-x64.fb2k-component"
+      label="Version 2.1.0 beta 3"
     />
     <DownloadListItem
-      filename="foo_ui_columns-2.1.0-beta.1.x86-x64.fb2k-component"
-      label="Version 2.1.0 beta 1"
+      filename="foo_ui_columns-2.0.0.x86-x64.fb2k-component"
+      label="Version 2.0.0"
     />
     <DownloadListItem
       filename="foo_ui_columns-1.7.0.fb2k-component"
