--- a/src/pages/typefind-panel.astro
+++ b/src/pages/typefind-panel.astro
@@ -11,8 +11,35 @@ const repo = "typefind_panel"
 <DownloadLayout title={title} metaDescription={description} repo={repo}>
   <p>Typefind is an in-line playlist search bar for Columns UI.</p>
 
+  <h2>Usage</h2>
+
+  <ol>
+    <li>
+      Add the panel to your layout. (For example below the playlist view in a
+      vertical splitter.)
+    </li>
+    <li>
+      Configure the search mode and pattern used by clicking the Configure...
+      button on the Layout preferences page.
+    </li>
+    <li>Assign the Edit/Type-find command to a keyboard shortcut.</li>
+    <li>
+      Use your shortcut to activate Typefind and enter a search query. The Up
+      and Down keys navigate through results, Enter plays the focused item and
+      Ctrl+Enter adds it to the queue.
+    </li>
+  </ol>
+
   <h3 class="title is-3">Downloads</h3>
   <h4 class="title is-4">Latest version</h4>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_typefind-0.4.0.x86-x64.fb2k-component"
+      label="Version 0.4.0"
+    />
+  </DownloadList>
+
+  <h4 class="title is-4">Previous version</h4>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_typefind-0.3.1.fb2k-component"
