--- a/src/pages/ipod-manager.astro
+++ b/src/pages/ipod-manager.astro
@@ -44,7 +44,7 @@ const repo = "ipod_manager"
       Additionally, iOS device users on 64-bit Windows must use{" "}
       <a
         href="https://support.apple.com/kb/DL1816"
-        referrerPolicy="no-referrer"
+        referrerpolicy="no-referrer"
       >
         this version of iTunes
       </a>
