--- a/src/components/IconLinkListItem.astro
+++ b/src/components/IconLinkListItem.astro
@@ -1,5 +1,6 @@
 ---
-export interface Props {
+import type { HTMLAttributes } from "astro/types"
+export interface Props extends HTMLAttributes<"a"> {
   href: string
   iconClass: string
 }
