--- a/src/layouts/DownloadLayout.astro
+++ b/src/layouts/DownloadLayout.astro
@@ -1,11 +1,6 @@
 ---
 import Layout from "./Layout.astro"
-import {
-  DownloadListItem,
-  ExternalLinkList,
-  ExternalLinkListItem,
-  GitHubStars,
-} from "../components"
+import { ExternalLinkList, GitHubStars } from "../components"
 
 export interface Props {
   title: string
