Add SVG services 0.4.0

--- a/src/pages/svg-services.astro
+++ b/src/pages/svg-services.astro
@@ -17,13 +17,17 @@ const repo = "svg-services"
   <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_svg_services-0.3.0.x86-x64.fb2k-component"
-      label="Version 0.3.0"
+      filename="foo_svg_services-0.4.0.x86-x64.fb2k-component"
+      label="Version 0.4.0"
     />
   </DownloadList>
 
   <h4 class="title is-4">Previous version</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_svg_services-0.3.0.x86-x64.fb2k-component"
+      label="Version 0.3.0"
+    />
     <DownloadListItem
       filename="foo_svg_services-0.2.0.x86-x64.fb2k-component"
       label="Version 0.2.0"
