Link to new Columns UI documentation site and add missing redirect

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -32,8 +32,8 @@ const screenshotHeight = `${(
       label: "Release notes",
     },
     {
-      href: "https://wiki.yuo.be/columns_ui:faqs",
-      label: "Frequently asked questions",
+      href: "https://columns-ui.readthedocs.io/en/latest/",
+      label: "Documentation site",
     },
     {
       href: "https://hydrogenaud.io/index.php/topic,28647.0.html",
