--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -26,7 +26,7 @@ const repo = "album_list_panel"
 
   <h3 class="title is-3">Downloads</h3>
 
-  <h4 class="title is-4">Latest stable version</h4>
+  <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_albumlist-2.0.3.x86-x64.fb2k-component"
