Add Columns UI 3.0.0 alpha 5

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -78,7 +78,7 @@ const screenshotHeight = `${(
   </ul>
   <h3 class="title is-3">Requirements</h3>
   <ul>
-    <li>Windows 7 Service Pack 1 or later</li>
+    <li>Windows 7 Service Pack 1 with Platform Update, or newer</li>
     <li>foobar2000 1.5 or newer</li>
   </ul>
 
@@ -87,8 +87,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Latest pre-release version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0-alpha.4.x86-x64.fb2k-component"
-      label="Version 3.0.0 alpha 4"
+      filename="foo_ui_columns-3.0.0-alpha.5.x86-x64.fb2k-component"
+      label="Version 3.0.0 alpha 5"
     />
   </DownloadList>
 
@@ -109,8 +109,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0-alpha.3.x86-x64.fb2k-component"
-      label="Version 3.0.0 alpha 3"
+      filename="foo_ui_columns-3.0.0-alpha.4.x86-x64.fb2k-component"
+      label="Version 3.0.0 alpha 4"
     />
     <DownloadListItem
       filename="foo_ui_columns-2.0.0.x86-x64.fb2k-component"
