Add Album list panel 2.0.4

--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -29,13 +29,17 @@ const repo = "album_list_panel"
   <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_uie_albumlist-2.0.3.x86-x64.fb2k-component"
-      label="Version 2.0.3"
+      filename="foo_uie_albumlist-2.0.4.x86-x64.fb2k-component"
+      label="Version 2.0.4"
     />
   </DownloadList>
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_albumlist-2.0.3.x86-x64.fb2k-component"
+      label="Version 2.0.3"
+    />
     <DownloadListItem
       filename="foo_uie_albumlist-2.0.2.x86-x64.fb2k-component"
       label="Version 2.0.2"
