--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -87,8 +87,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Latest pre-release version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0-beta.4.x86-x64.fb2k-component"
-      label="Version 3.0.0 beta 4"
+      filename="foo_ui_columns-3.0.0-beta.5.x86-x64.fb2k-component"
+      label="Version 3.0.0 beta 5"
     />
   </DownloadList>
 
@@ -108,6 +108,10 @@ const screenshotHeight = `${(
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.0.0-beta.4.x86-x64.fb2k-component"
+      label="Version 3.0.0 beta 4"
+    />
     <DownloadListItem
       filename="foo_ui_columns-3.0.0-beta.3.x86-x64.fb2k-component"
       label="Version 3.0.0 beta 3"
