--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -87,8 +87,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Latest pre-release version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0-beta.5.x86-x64.fb2k-component"
-      label="Version 3.0.0 beta 5"
+      filename="foo_ui_columns-3.0.0-rc.1.x86-x64.fb2k-component"
+      label="Version 3.0.0 RC 1"
     />
   </DownloadList>
 
@@ -109,16 +109,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0-beta.4.x86-x64.fb2k-component"
-      label="Version 3.0.0 beta 4"
-    />
-    <DownloadListItem
-      filename="foo_ui_columns-3.0.0-beta.3.x86-x64.fb2k-component"
-      label="Version 3.0.0 beta 3"
-    />
-    <DownloadListItem
-      filename="foo_ui_columns-3.0.0-beta.2.x86-x64.fb2k-component"
-      label="Version 3.0.0 beta 2"
+      filename="foo_ui_columns-3.0.0-beta.5.x86-x64.fb2k-component"
+      label="Version 3.0.0 beta 5"
     />
     <DownloadListItem
       filename="foo_ui_columns-2.0.0.x86-x64.fb2k-component"
