--- a/src/pages/columns-ui-sdk.astro
+++ b/src/pages/columns-ui-sdk.astro
@@ -29,8 +29,8 @@ const links = [
   <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="columns_ui-sdk-8.0.0-rc.1.7z"
-      label="Version 8.0.0 RC 1"
+      filename="columns_ui-sdk-8.0.0.7z"
+      label="Version 8.0.0"
     />
   </DownloadList>
 
