--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -87,8 +87,8 @@ const screenshotHeight = `${(
   <h4 class="title is-4">Latest version</h4>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0.x86-x64.fb2k-component"
-      label="Version 3.0.0"
+      filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
+      label="Version 3.0.1"
     />
   </DownloadList>
 
@@ -100,6 +100,10 @@ const screenshotHeight = `${(
 
   <h4 class="title is-4">Previous versions</h4>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.0.0.x86-x64.fb2k-component"
+      label="Version 3.0.0"
+    />
     <DownloadListItem
       filename="foo_ui_columns-3.0.0-beta.5.x86-x64.fb2k-component"
       label="Version 3.0.0 beta 5"
