--- a/src/pages/ipod-manager.astro
+++ b/src/pages/ipod-manager.astro
@@ -37,6 +37,13 @@ const repo = "ipod_manager"
 >
   <div class="notification is-warning">
     <p>
+      <strong>No longer under development</strong>
+    </p>
+    <p>iPod manager is no longer under development.</p>
+  </div>
+
+  <div class="notification is-warning">
+    <p>
       <strong>Notice about iOS support</strong>
     </p>
     <p>Sync and other write commands are not supported on iOS 5 and newer.</p>
@@ -46,9 +53,8 @@ const repo = "ipod_manager"
         href="https://support.apple.com/kb/DL1816"
         referrerpolicy="no-referrer"
       >
-        this version of iTunes
-      </a>
-      .
+        this version of iTunes</a
+      >.
     </p>
   </div>
 
