Update Columns UI feature list

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -62,15 +62,24 @@ const screenshotHeight = `${(
     </a>
   </Screenshots>
 
-  <p>Columns UI is a user interface for the foobar2000 audio player.</p>
-  <p>Features include:</p>
+  <p>
+    Columns UI is an open-source user interface for the foobar2000 audio player,
+    with interchangeable panels and toolbars.
+  </p>
+  <p>Its features include:</p>
   <ul>
     <li>a dark mode on Windows 10 and 11</li>
     <li>a playlist view with grouping, artwork and in-line metadata editing</li>
-    <li>interchangeable panels and toolbars</li>
     <li>
-      filter panels to quickly filter your media library by genre, artist or
-      other fields
+      <a href="https://en.wikipedia.org/wiki/DirectWrite" rel="noopener"
+        >DirectWrite text rendering</a
+      > in most built-in panels, including colour emoji support
+    </li>
+    <li>colour management for artwork</li>
+    <li>
+      support for SVG icons in the buttons toolbar via <a href="/svg-services"
+        >SVG services</a
+      >
     </li>
     <li>
       item details and properties panels to view detailed track information
