--- a/src/pages/ipod-manager.astro
+++ b/src/pages/ipod-manager.astro
@@ -49,10 +49,7 @@ const repo = "ipod_manager"
     <p>Sync and other write commands are not supported on iOS 5 and newer.</p>
     <p>
       Additionally, iOS device users on 64-bit Windows must use{" "}
-      <a
-        href="https://support.apple.com/kb/DL1816"
-        referrerpolicy="no-referrer"
-      >
+      <a href="https://support.apple.com/kb/DL1816" rel="nofollow noreferrer">
         this version of iTunes</a
       >.
     </p>
