Tweak layout and styles

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -7,7 +7,7 @@ import ExternalMenuItem from "./ExternalMenuItem.astro"
   <ul class="menu-list">
     <InternalMenuItem path="/" title="Home" />
   </ul>
-  <p class="menu-label">foobar2000 components</p>
+  <p class="menu-label">Components</p>
   <ul class="menu-list">
     <InternalMenuItem path="/columns-ui" title="Columns UI" />
     <InternalMenuItem path="/album-list-panel" title="Album list panel" />
