--- a/src/layouts/Layout.scss
+++ b/src/layouts/Layout.scss
@@ -34,28 +34,67 @@ $yellow-light: #e6dece;
 @use "@fortawesome/fontawesome-free/scss/fontawesome";
 @use "@fortawesome/fontawesome-free/scss/solid";
 
+:root {
+  color-scheme: light dark;
+  --link-dark: #e47703;
+  --link-light: #b56300;
+  --link-hover-dark: oklch(from var(--link-dark) calc(l + 0.2) calc(c + 0.1) h);
+  --link-hover-light: oklch(
+    from var(--link-light) calc(l - 0.2) calc(c + 0.1) h
+  );
+}
+
 @media not (prefers-color-scheme: dark) {
   :root {
     --bulma-scheme-h: 39;
     --bulma-scheme-s: 45%;
-    --bulma-scheme-main-l: 90%;
+    --bulma-scheme-main-l: 93%;
   }
 }
 
 .content {
   --bulma-content-heading-weight: 600;
+
+  a {
+    text-decoration-thickness: 6%;
+    text-underline-offset: 0.2em;
+
+    &,
+    &:visited {
+      color: light-dark(var(--link-light), var(--link-dark));
+    }
+
+    &:hover {
+      color: light-dark(var(--link-hover-light), var(--link-hover-dark));
+      text-decoration: underline;
+    }
+  }
 }
 
 .menu {
+  --bulma-menu-list-link-padding: 0.4em 0.75em;
+
   @include mixins.from(utilities.$tablet) {
     margin-top: 0.5rem;
   }
 
   .is-active {
-    font-weight: bold;
+    font-weight: 600;
   }
 }
 
 .menu-label {
   padding-left: 0.75rem;
+
+  &:not(:first-child) {
+    margin-top: 1.25rem;
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
+}
+
+.menu-list a {
+  margin: 0.1em 0;
 }
