Fix nested aside

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,9 +40,9 @@ const computedTitle =
     <section class="section">
       <div class="container">
         <main class="columns is-4">
-          <aside class="column is-narrow">
+          <div class="column is-narrow">
             <Menu />
-          </aside>
+          </div>
           <div class="column content">
             {title && <h1 class="title is-2">{title}</h1>}
             <slot />
