--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -24,9 +24,9 @@ const repo = "album_list_panel"
     library in a hierarchical structure.
   </p>
 
-  <h3 class="title is-3">Downloads</h3>
+  <h2>Downloads</h2>
 
-  <h4 class="title is-4">Latest version</h4>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_albumlist-2.0.5.x86-x64.fb2k-component"
@@ -34,7 +34,7 @@ const repo = "album_list_panel"
     />
   </DownloadList>
 
-  <h4 class="title is-4">Previous versions</h4>
+  <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_albumlist-2.0.4.x86-x64.fb2k-component"
