--- a/src/pages/columns-ui-sdk.astro
+++ b/src/pages/columns-ui-sdk.astro
@@ -25,8 +25,8 @@ const links = [
     See the documentation for more information.
   </p>
 
-  <h3 class="title is-3">Downloads</h3>
-  <h4 class="title is-4">Latest version</h4>
+  <h2>Downloads</h2>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
       filename="columns_ui-sdk-8.0.0.7z"
@@ -34,7 +34,7 @@ const links = [
     />
   </DownloadList>
 
-  <h4 class="title is-4">Previous version</h4>
+  <h3>Previous version</h3>
   <DownloadList>
     <DownloadListItem
       filename="columns_ui-sdk-7.0.0.7z"
