--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -84,15 +84,15 @@ const repo = "columns_ui"
       item details and properties panels to view detailed track information
     </li>
   </ul>
-  <h3 class="title is-3">Requirements</h3>
+  <h2>Requirements</h2>
   <ul>
     <li>Windows 7 Service Pack 1 with Platform Update, or newer</li>
     <li>foobar2000 1.5 or newer</li>
   </ul>
 
-  <h3 class="title is-3">Downloads</h3>
+  <h2>Downloads</h2>
 
-  <h4 class="title is-4">Latest pre-release version</h4>
+  <h3>Latest pre-release version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_ui_columns-3.1.0-alpha.3.x86-x64.fb2k-component"
@@ -100,7 +100,7 @@ const repo = "columns_ui"
     />
   </DownloadList>
 
-  <h4 class="title is-4">Latest stable version</h4>
+  <h3>Latest stable version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
@@ -114,7 +114,7 @@ const repo = "columns_ui"
     </a>
   </p>
 
-  <h4 class="title is-4">Previous versions</h4>
+  <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_ui_columns-3.0.0.x86-x64.fb2k-component"
