--- a/src/pages/typefind-panel.astro
+++ b/src/pages/typefind-panel.astro
@@ -30,8 +30,8 @@ const repo = "typefind_panel"
     </li>
   </ol>
 
-  <h3 class="title is-3">Downloads</h3>
-  <h4 class="title is-4">Latest version</h4>
+  <h2>Downloads</h2>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_typefind-0.4.0.x86-x64.fb2k-component"
@@ -39,7 +39,7 @@ const repo = "typefind_panel"
     />
   </DownloadList>
 
-  <h4 class="title is-4">Previous version</h4>
+  <h3>Previous version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_typefind-0.3.1.fb2k-component"
