--- a/src/components/GitHubStars.astro
+++ b/src/components/GitHubStars.astro
@@ -9,7 +9,7 @@ const { repo } = Astro.props
 <a href={`https://github.com/reupen/${repo}`}>
   <img
     style={{ height: "25px", width: "auto" }}
-    src={`https://img.shields.io/github/stars/reupen/${repo}.svg?style=social&label=Star`}
+    src={`https://img.shields.io/github/stars/reupen/${repo}.svg?style=flat&logo=github&label=Stars`}
     alt="View on GitHub"
     title="View on GitHub"
   />
