--- a/src/components/Screenshots.astro
+++ b/src/components/Screenshots.astro
@@ -9,7 +9,7 @@
     grid-auto-rows: auto;
     row-gap: 10px;
     column-gap: 10px;
-    margin-bottom: 16px;
+    margin: 1.25rem 0;
   }
 </style>
 
