--- a/src/pages/console-panel.astro
+++ b/src/pages/console-panel.astro
@@ -20,9 +20,9 @@ const repo = "console_panel"
 >
   <p>Console panel is a console viewer for Columns UI.</p>
 
-  <h3 class="title is-3">Downloads</h3>
+  <h2>Downloads</h2>
 
-  <h4 class="title is-4">Latest version</h4>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_console-3.0.0.x86-x64.fb2k-component"
@@ -30,7 +30,7 @@ const repo = "console_panel"
     />
   </DownloadList>
 
-  <h4 class="title is-4">Previous versions</h4>
+  <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_console-3.0.0-beta.2.x86-x64.fb2k-component"
