--- a/src/pages/ipod-manager-sdk.astro
+++ b/src/pages/ipod-manager-sdk.astro
@@ -14,8 +14,8 @@ const repo = "ipod_manager"
     iPods.
   </p>
 
-  <h3 class="title is-3">Downloads</h3>
-  <h4 class="title is-4">Latest version</h4>
+  <h2>Downloads</h2>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem filename="dop-sdk-0.2.7z" label="Version 0.2" />
   </DownloadList>
