--- a/src/pages/svg-services.astro
+++ b/src/pages/svg-services.astro
@@ -13,8 +13,8 @@ const repo = "svg-services"
     files.
   </p>
 
-  <h3 class="title is-3">Downloads</h3>
-  <h4 class="title is-4">Latest version</h4>
+  <h2>Downloads</h2>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_svg_services-0.4.0.x86-x64.fb2k-component"
@@ -22,7 +22,7 @@ const repo = "svg-services"
     />
   </DownloadList>
 
-  <h4 class="title is-4">Previous version</h4>
+  <h3>Previous version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_svg_services-0.3.0.x86-x64.fb2k-component"
