--- a/src/layouts/font-awesome.scss
+++ b/src/layouts/font-awesome.scss
@@ -3,4 +3,5 @@
 );
 
 @use "@fortawesome/fontawesome-free/scss/fontawesome";
+@use "@fortawesome/fontawesome-free/scss/regular";
 @use "@fortawesome/fontawesome-free/scss/solid";
