--- a/src/layouts/globals.pcss
+++ b/src/layouts/globals.pcss
@@ -27,7 +27,7 @@
     oklch(from #14161a /* var(--body-background) */ calc(l + 0.12) c h)
   );
   --text-accent-colour: light-dark(#a12400, #ff8049);
-  --text-accent-colour-highlight: light-dark(#b82a00, #ffaf47);
+  --text-accent-colour-highlight: light-dark(#b82a00, #ff6900);
   --text-colour: light-dark(#000, #fff);
   --text-colour-muted: light-dark(#151515, #ccc);
   --fa-li-margin: 2rem;
