--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -37,6 +37,7 @@ const repo = "columns_ui"
       label: "Discussion at the foobar2000 forums",
     },
   ]}
+  hasSponsorLink
 >
   <Screenshots>
     <a href={darkScreenshot.src} class="screenshot">
