Add Columns UI 3.1.0

--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -93,19 +93,11 @@ const repo = "columns_ui"
 
   <h2>Downloads</h2>
 
-  <h3>Latest pre-release version</h3>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.1.0-beta.1.x86-x64.fb2k-component"
-      label="Version 3.1.0 beta 1"
-    />
-  </DownloadList>
-
-  <h3>Latest stable version</h3>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
-      label="Version 3.0.1"
+      filename="foo_ui_columns-3.1.0.x86-x64.fb2k-component"
+      label="Version 3.1.0"
     />
   </DownloadList>
 
@@ -118,12 +110,12 @@ const repo = "columns_ui"
   <h3>Previous versions</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.1.0-alpha.3.x86-x64.fb2k-component"
-      label="Version 3.1.0 alpha 3"
+      filename="foo_ui_columns-3.1.0-beta.1.x86-x64.fb2k-component"
+      label="Version 3.1.0 beta 1"
     />
     <DownloadListItem
-      filename="foo_ui_columns-3.0.0.x86-x64.fb2k-component"
-      label="Version 3.0.0"
+      filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
+      label="Version 3.0.1"
     />
     <DownloadListItem
       filename="foo_ui_columns-2.1.0.x86-x64.fb2k-component"
