Add Typefind 0.5.0 beta 1

--- a/src/pages/typefind-panel.astro
+++ b/src/pages/typefind-panel.astro
@@ -16,7 +16,7 @@ const repo = "typefind_panel"
   <ol>
     <li>
       Add the panel to your layout. (For example below the playlist view in a
-      vertical splitter.)
+      Column container.)
     </li>
     <li>
       Configure the search mode and pattern used by clicking the Configure...
@@ -31,7 +31,15 @@ const repo = "typefind_panel"
   </ol>
 
   <h2>Downloads</h2>
-  <h3>Latest version</h3>
+  <h3>Latest pre-release version</h3>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_typefind-0.5.0-beta.1.x86-x64.fb2k-component"
+      label="Version 0.5.0 beta 1"
+    />
+  </DownloadList>
+
+  <h3>Latest stable version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_typefind-0.4.0.x86-x64.fb2k-component"
