--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -96,8 +96,8 @@ const repo = "columns_ui"
   <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_ui_columns-3.1.2.x86-x64.fb2k-component"
-      label="Version 3.1.2"
+      filename="foo_ui_columns-3.1.3.x86-x64.fb2k-component"
+      label="Version 3.1.3"
     />
   </DownloadList>
 
@@ -109,6 +109,10 @@ const repo = "columns_ui"
 
   <h3>Previous versions</h3>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.1.2.x86-x64.fb2k-component"
+      label="Version 3.1.2"
+    />
     <DownloadListItem
       filename="foo_ui_columns-3.1.1.x86-x64.fb2k-component"
       label="Version 3.1.1"
