Add Album list panel 2.1.0 alpha 1

--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -26,7 +26,15 @@ const repo = "album_list_panel"
 
   <h2>Downloads</h2>
 
-  <h3>Latest version</h3>
+  <h3>Latest pre-release version</h3>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_albumlist-2.1.0-alpha.1.x86-x64.fb2k-component"
+      label="Version 2.1.0 alpha 1"
+    />
+  </DownloadList>
+
+  <h3>Latest stable version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_uie_albumlist-2.0.5.x86-x64.fb2k-component"
