--- a/src/pages/columns-ui.astro
+++ b/src/pages/columns-ui.astro
@@ -92,7 +92,15 @@ const repo = "columns_ui"
 
   <h2>Downloads</h2>
 
-  <h3>Latest version</h3>
+  <h3>Latest pre-release version</h3>
+  <DownloadList>
+    <DownloadListItem
+      filename="foo_ui_columns-3.2.0-beta.1.x86-x64.fb2k-component"
+      label="Version 3.2.0 beta 1"
+    />
+  </DownloadList>
+
+  <h3>Latest stable version</h3>
   <DownloadList>
     <DownloadListItem
       filename="foo_ui_columns-3.1.5.x86-x64.fb2k-component"
@@ -108,18 +116,6 @@ const repo = "columns_ui"
 
   <h3>Previous versions</h3>
   <DownloadList>
-    <DownloadListItem
-      filename="foo_ui_columns-3.1.4.x86-x64.fb2k-component"
-      label="Version 3.1.4"
-    />
-    <DownloadListItem
-      filename="foo_ui_columns-3.1.3.x86-x64.fb2k-component"
-      label="Version 3.1.3"
-    />
-    <DownloadListItem
-      filename="foo_ui_columns-3.1.2.x86-x64.fb2k-component"
-      label="Version 3.1.2"
-    />
     <DownloadListItem
       filename="foo_ui_columns-3.0.1.x86-x64.fb2k-component"
       label="Version 3.0.1"
