--- a/src/pages/console-panel.astro
+++ b/src/pages/console-panel.astro
@@ -22,24 +22,24 @@ const repo = "console_panel"
 
   <h2>Downloads</h2>
 
-  <h3>Latest pre-release version</h3>
+  <h3>Latest version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_uie_console-3.1.0-beta.2.x86-x64.fb2k-component"
-      label="Version 3.1.0 beta 2"
-    />
-  </DownloadList>
-
-  <h3>Latest stable version</h3>
-  <DownloadList>
-    <DownloadListItem
-      filename="foo_uie_console-3.0.0.x86-x64.fb2k-component"
-      label="Version 3.0.0"
+      filename="foo_uie_console-3.1.0.x86-x64.fb2k-component"
+      label="Version 3.1.0"
     />
   </DownloadList>
 
   <h3>Previous versions</h3>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_console-3.1.0-beta.2.x86-x64.fb2k-component"
+      label="Version 3.1.0 beta 2"
+    />
+    <DownloadListItem
+      filename="foo_uie_console-3.0.0.x86-x64.fb2k-component"
+      label="Version 3.0.0"
+    />
     <DownloadListItem
       filename="foo_uie_console-2.0.0.fb2k-component"
       label="Version 2.0.0"
