--- a/src/pages/album-list-panel.astro
+++ b/src/pages/album-list-panel.astro
@@ -29,8 +29,8 @@ const repo = "album_list_panel"
   <h3>Latest pre-release version</h3>
   <DownloadList>
     <DownloadListItem
-      filename="foo_uie_albumlist-2.1.0-alpha.1.x86-x64.fb2k-component"
-      label="Version 2.1.0 alpha 1"
+      filename="foo_uie_albumlist-2.1.0-beta.1.x86-x64.fb2k-component"
+      label="Version 2.1.0 beta 1"
     />
   </DownloadList>
 
@@ -44,6 +44,10 @@ const repo = "album_list_panel"
 
   <h3>Previous versions</h3>
   <DownloadList>
+    <DownloadListItem
+      filename="foo_uie_albumlist-2.1.0-alpha.1.x86-x64.fb2k-component"
+      label="Version 2.1.0 alpha 1"
+    />
     <DownloadListItem
       filename="foo_uie_albumlist-2.0.4.x86-x64.fb2k-component"
       label="Version 2.0.4"
